--- a/frontend/src/app/shared/component/dashboard/dashboard.component.html
+++ b/frontend/src/app/shared/component/dashboard/dashboard.component.html
@@ -1,8 +1,8 @@
 <div class="row m-0 dashboard-container">
-    <div class="col-3 p-0" style="background-color: red;">
+    <div class="col-3 p-0" id="order-panel">
         <order-panel></order-panel>
     </div>
-    <div class="col p-0" style="background-color: aqua;">
+    <div class="col p-0">
         <router-outlet></router-outlet>
     </div>
 </div>
