--- a/frontend/src/app/shared/component/navbar/navbar.component.html
+++ b/frontend/src/app/shared/component/navbar/navbar.component.html
@@ -9,16 +9,16 @@
             <a class="nav-link active" aria-current="page" href="#">Home</a>
           </li>
           <li class="nav-item ps-4 pe-4">
-            <a class="nav-link" href="#">Listino</a>
+            <a routerLink="menu" class="nav-link" href="#">Listino</a>
           </li>
           <li class="nav-item ps-4 pe-4">
-            <a class="nav-link" href="#">Ordini</a>
+            <a routerLink="order" class="nav-link" href="#">Ordini</a>
           </li>
           <li class="nav-item ps-4 pe-4">
-            <a class="nav-link" href="#">Sconti</a>
+            <a routerLink="stations" class="nav-link" href="#">Postazioni</a>
           </li>
           <li class="nav-item ps-4 pe-4">
-            <a class="nav-link" href="#">Statistiche</a>
+            <a routerLink="stats" class="nav-link" href="#">Statistiche</a>
           </li>
         </ul>
       </div>
