--- a/frontend/src/app/shared/component/order-card/order-card.component.html
+++ b/frontend/src/app/shared/component/order-card/order-card.component.html
@@ -4,8 +4,8 @@
     <p class="card-text">{{content}}</p>
     <div class="row justify-content-between">
       <div class="col-4">
-        <a *ngIf="orderStatus && orderStatus != 'DELETED'" class="btn btn-primary"
-          (click)="startNextStep()">{{stepLabel}}</a>
+        <button *ngIf="orderStatus && orderStatus != 'DELETED'" delete
+          (click)="startNextStep()">{{stepLabel}}</button>
       </div>
       <div class="col-4">
         <ng-container [ngSwitch]="orderStatus">
