Initialize order form and order component

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,2 +1,6 @@
 <navbar></navbar>
-<dashboard></dashboard>
+<div class="row m-0 dashboard-container">
+    <div class="col p-0 mt-4">
+        <router-outlet></router-outlet>
+    </div>
+</div>
