--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -1,3 +1,5 @@
-html, body {
-    height:100%;
+.dashboard-container {
+    height: calc(100vh - 70px); // right value is the navbar height
+    background: rgb(230,230,230);
+    background: linear-gradient(90deg, rgba(230,230,230,1) 23%, rgba(203,203,203,1) 61%, rgb(243, 243, 243) 100%);
 }
