--- a/frontend/src/app/shared/component/navbar/navbar.component.html
+++ b/frontend/src/app/shared/component/navbar/navbar.component.html
@@ -1,23 +1,27 @@
-<nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">
-        <span class="material-icons">restaurant_menu</span>
-      </a>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item ps-4 pe-4">
-            <a routerLink="menu" class="nav-link" href="#">Listino</a>
-          </li>
-          <li class="nav-item ps-4 pe-4">
-            <a routerLink="order" class="nav-link" href="#">Ordini</a>
-          </li>
-          <li class="nav-item ps-4 pe-4">
-            <a routerLink="stations" class="nav-link" href="#">Postazioni</a>
-          </li>
-          <li class="nav-item ps-4 pe-4">
-            <a routerLink="stats" class="nav-link" href="#">Statistiche</a>
-          </li>
-        </ul>
-      </div>
+<header class="nav-container">
+  <nav class="nav">
+    <a (click)='navigateTo("dashboard")' class="nav-logo">
+      <!-- <span class="material-icons">storefront</span> -->
+      <img class="nav-logo" src="/assets/icon.png">
+    </a>
+    <ul class="nav-menu">
+      <li class="nav-item">
+        <a (click)='navigateTo("menu")' class="nav-link">Listino</a>
+      </li>
+      <li class="nav-item">
+        <a (click)='navigateTo("order")' class="nav-link">Ordini</a>
+      </li>
+      <li class="nav-item">
+        <a (click)='navigateTo("stations")' class="nav-link">Postazioni</a>
+      </li>
+      <li class="nav-item">
+        <a (click)='navigateTo("stats")' class="nav-link">Statistiche</a>
+      </li>
+    </ul>
+    <div class="hamburger" (click)="toggleMenu()">
+      <span class="bar"></span>
+      <span class="bar"></span>
+      <span class="bar"></span>
     </div>
   </nav>
+</header>
