--- a/frontend/src/app/order/component/order-form/order-form.component.scss
+++ b/frontend/src/app/order/component/order-form/order-form.component.scss
@@ -1,10 +1,59 @@
-.text {
-    display: block;
+#menu-item__container {
+    margin-top: 15px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-content: center;
+
+    .menu-item__container-item {
+        flex: 1;
+        margin-left: 15px;
+        margin-right: 15px;
+    }
+
+    .menu-item__card-category--container {
+        margin-top: 10px;
+        margin-bottom: 10px;
+        display: grid;
+
+        button {
+            justify-self: center;
+            align-self: stretch;
+            margin: 5px;
+        }
+    }
+}
+
+#price__container {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-content: flex-start;
+    align-items: center;
+
+    & > div,
+    & > b,
+    & > span {
+        margin: 10px;
+    }
+
+    & > span {
+        min-width: 100px;
+    }
 }
 
 @media only screen and (max-width: 768px) {
+    
+    #menu-item__container {
+        flex-direction: column;
+        justify-content: center;
+        align-content: center;
+    }
 
-    .text {
-        display: none;
+    #price__container {
+        flex-direction: column;
+        justify-content: center;
+        align-content: center;
+        align-content: center;
     }
 }
