--- a/frontend/src/app/shared/component/navbar/navbar.component.scss
+++ b/frontend/src/app/shared/component/navbar/navbar.component.scss
@@ -77,6 +77,7 @@ a {
         border-radius: 10px;
         text-align: center;
         transition: 0.3s;
+        z-index: 1000;
         box-shadow:
             0 10px 27px rgba(0, 0, 0, 0.05);
     }
