--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -13,3 +13,35 @@ html {
     height:100%;
     font-family: 'Roboto', sans-serif;
 }
+
+// responsive button text helper with media query for remove text and show only icon
+.r-button-text {
+  display: block;
+}
+
+@media only screen and (max-width: 768px) {
+  .r-button-text {
+      display: none;
+  }
+}
+
+
+::-webkit-scrollbar-track
+{
+  border-radius: 10px;
+  background-color: rgb(230, 242, 250);
+}
+
+::-webkit-scrollbar
+{ 
+  width: 10px;
+  background-color: rgb(230, 242, 250);
+}
+
+::-webkit-scrollbar-thumb
+{
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.1);
+  box-shadow: inset 0 0 6px rgba(0,0,0,.1);
+  background-color: #d2d2d3;
+}
