Implement FE menu item list

--- a/backend/src/main/resources/templates/thymeleaf_template.html
+++ b/backend/src/main/resources/templates/thymeleaf_template.html
@@ -42,7 +42,7 @@
 
     <div>
         <span><strong>Cassiere Bozzz</strong></span>
-        <span th:text="${order.orderTime}"></span>
+        <span th:text="${order.creationTimestamp}"></span>
         <span>Copia cliente</span>
     </div>
 
