--- a/frontend/src/app/order/component/order/order.component.html
+++ b/frontend/src/app/order/component/order/order.component.html
@@ -20,7 +20,7 @@
         <th scope="row">{{order?.tableNumber}}</th>
         <td>{{order?.client}}</td>
         <td>{{order?.total}}</td>
-        <td>{{order?.orderTime}}</td>
+        <td>{{order?.creationTimestamp}}</td>
       </tr>
     </tbody>
   </table>
