#34 printercfg fe for categories.

--- a/frontend/src/app/menu/component/menu/menu.component.html
+++ b/frontend/src/app/menu/component/menu/menu.component.html
@@ -24,6 +24,14 @@
                 </select>
             </div>
             <div class="col-6">
+                <ng-container *ngFor="let printerCfg of printerCfgList">
+                    <div class="form-check form-check-inline form-switch">
+                        <input class="form-check-input" type="checkbox" [value]="printerCfg?.id" (change)="onSelectionChange($event)">
+                        <label class="form-check-label" for="{{printerCfg.id}}">{{printerCfg?.name}}</label>
+                    </div>
+                </ng-container>
+            </div>
+            <div class="col-6">
                 <button type="submit" class="btn btn-primary d-flex justify-content-around align-items-center">
                     <span class="material-icons-outlined">add</span>
                     <span class="text">Aggiungi</span>
