--- a/frontend/src/app/menu/component/menu/menu.component.html
+++ b/frontend/src/app/menu/component/menu/menu.component.html
@@ -23,10 +23,10 @@
                     <option value="dark">Nero</option>
                 </select>
             </div>
-            <div class="col-6">
+            <div class="col-12">
                 <ng-container *ngFor="let printerCfg of printerCfgList">
                     <div class="form-check form-check-inline form-switch">
-                        <input class="form-check-input" type="checkbox" [value]="printerCfg?.id" (change)="onSelectionChange($event)">
+                        <input class="form-check-input printercfg-input" type="checkbox" [value]="printerCfg?.id" (change)="onPrinterCfgChange($event)">
                         <label class="form-check-label" for="{{printerCfg.id}}">{{printerCfg?.name}}</label>
                     </div>
                 </ng-container>
