--- a/frontend/src/app/menu/component/category-modal/category-modal.component.html
+++ b/frontend/src/app/menu/component/category-modal/category-modal.component.html
@@ -25,6 +25,14 @@
                         <option value="dark">Nero</option>
                     </select>
                 </div>
+                <div class="col-6">
+                    <ng-container *ngFor="let printerCfg of printerCfgList">
+                        <div class="form-check form-check-inline form-switch">
+                            <input class="form-check-input printercfg-input" type="checkbox" [value]="printerCfg?.id" (change)="onPrinterCfgChange($event)">
+                            <label class="form-check-label" for="{{printerCfg.id}}">{{printerCfg?.name}}</label>
+                        </div>
+                    </ng-container>
+                </div>
             </div>
         </form>
 
