--- a/frontend/src/app/shared/component/navbar/navbar.component.html
+++ b/frontend/src/app/shared/component/navbar/navbar.component.html
@@ -12,7 +12,7 @@
         <a (click)='navigateTo("order")' class="nav-link">Ordini</a>
       </li>
       <li class="nav-item">
-        <a (click)='navigateTo("stations")' class="nav-link">Postazioni</a>
+        <a (click)='navigateTo("printer")' class="nav-link">Stampanti</a>
       </li>
       <li class="nav-item">
         <a (click)='navigateTo("stats")' class="nav-link">Statistiche</a>
